objects/parentabc__c.object
<CustomObject>
    <fields>
        <fullName>external__c</fullName>
        <externalId>true</externalId>
        <label>external</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldplus__c</fullName>
        <formula>1 + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>oldplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>plus__c</fullName>
        <label>plus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>parentabc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>parentabc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parentabc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>